--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
  
- h1   [
-       font-size: lange;
-       font-weight: bolc;
-       olor: blue;
+ h1{
+    font-size: large;
+    font-weight: bold;
+    color: blue;
+ }
 
 
 
